# Hematite

./: .gitignore  CLAUDE.md  Cargo.toml  DEVELOPER.md  README.md  cliff.toml
.github/workflows/: ci.yml  release.yml
config/: champion_list.json  fix_config.json  version.json
crates/hematite-cli/: Cargo.toml  README.md
crates/hematite-cli/src/: args.rs  banner.rs  hash_downloader.rs  interactive.rs  logging.rs  main.rs  process.rs  remote.rs  ui.rs  version_check.rs
crates/hematite-core/: Cargo.toml
crates/hematite-core/src/: context.rs  factory.rs  fallback.rs  filter.rs  lib.rs  pipeline.rs  repath.rs  strings.rs  traits.rs  walk.rs
crates/hematite-core/src/detect/: bnk.rs  mod.rs  rules.rs  shader.rs  skin.rs
crates/hematite-core/src/transform/: change_type.rs  ensure_field.rs  mod.rs  regex_ops.rs  remove.rs  remove_unreferenced.rs  rename_hash.rs  replace_ext.rs  shader_fallback.rs  vfx_shape.rs
crates/hematite-core/src/wad_pipeline/: converters.rs  detect.rs  mod.rs  transform.rs
crates/hematite-ltk/: Cargo.toml
crates/hematite-ltk/src/: bin_adapter.rs  convert.rs  hash_adapter.rs  lib.rs  lmdb_hash_adapter.rs  mesh_converter.rs  texture_converter.rs  wad_adapter.rs  wad_builder.rs
crates/hematite-types/: Cargo.toml
crates/hematite-types/src/: bin.rs  champion.rs  config.rs  hash.rs  lib.rs  repath.rs  result.rs  wad.rs
