[package]
name = "hematite-ltk"
description = "LTK adapter — the ONLY crate that imports league-toolkit"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
hematite-types = { workspace = true }
hematite-core = { path = "../hematite-core" }
anyhow = { workspace = true }
indexmap = { workspace = true }

# League file parsing — THIS IS THE ONLY CRATE THAT DEPENDS ON LTK
# When LTK breaks its API, only this crate needs updating.
# Using local dev version for latest updates (not on crates.io yet)
league-toolkit = { path = "../../../league-toolkit/crates/league-toolkit", features = ["wad", "meta"] }

# Math types (must match LTK's glam version: 0.27)
glam = "0.27"

# Hashing (for WAD path hashing)
xxhash-rust = { version = "0.8", features = ["xxh64"] }
