[package]
name = "hematite-ltk"
description = "LTK adapter — the ONLY crate that imports league-toolkit"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
hematite-types = { workspace = true }
hematite-core = { path = "../hematite-core" }
anyhow = { workspace = true }
indexmap = { workspace = true }

# League file parsing — THIS IS THE ONLY CRATE THAT DEPENDS ON LTK
# When LTK breaks its API, only this crate needs updating.
# Using git version (latest commit ca8eff4) since crates.io is outdated
league-toolkit = { git = "https://github.com/LeagueToolkit/league-toolkit", rev = "ca8eff4", features = ["wad", "meta", "texture", "mesh"] }

# Direct ltk_texture dependency to enable BC1/BC3 encoding (intel-tex feature)
# This enables DDS→TEX conversion with compression support
ltk_texture = { git = "https://github.com/LeagueToolkit/league-toolkit", rev = "ca8eff4", features = ["intel-tex"] }

# Primitive types for Color, etc.
ltk_primitives = { git = "https://github.com/LeagueToolkit/league-toolkit", rev = "ca8eff4" }

# Math types (must match LTK's glam version: 0.27)
glam = "0.27"

# Hashing (for WAD path hashing)
xxhash-rust = { version = "0.8", features = ["xxh64"] }

# LMDB database (for hash lookups)
heed = "0.20"

# Logging
tracing = "0.1"
